[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'tinycss2'
description = 'A tiny CSS parser'
keywords = ['css', 'parser']
authors = [{name = 'Simon Sapin', email = 'simon.sapin@exyr.org'}]
maintainers = [{name = 'CourtBouillon', email = 'contact@courtbouillon.org'}]
requires-python = '>=3.8'
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {file = 'LICENSE'}
dependencies = ['webencodings >=0.4']
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Text Processing',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://www.courtbouillon.org/tinycss2'
Documentation = 'https://doc.courtbouillon.org/tinycss2/'
Code = 'https://github.com/Kozea/tinycss2/'
Issues = 'https://github.com/Kozea/tinycss2/issues'
Changelog = 'https://github.com/Kozea/tinycss2/releases'
Donation = 'https://opencollective.com/courtbouillon'

[project.optional-dependencies]
doc = ['sphinx', 'sphinx_rtd_theme']
test = ['pytest', 'ruff']

[tool.flit.sdist]
exclude = ['.*']

[tool.pytest.ini_options]
norecursedirs = ['tests/css-parsing-tests']

[tool.coverage.run]
branch = true
include = ['tests/*', 'tinycss2/*']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'def __repr__', 'raise NotImplementedError']
omit = ['.*']

[tool.ruff]
extend-exclude = ['tests/css-parsing-tests']

[tool.ruff.lint]
select = ['E', 'W', 'F', 'I', 'N', 'RUF']
ignore = ['RUF001', 'RUF002', 'RUF003', 'N803', 'N806']
