[metadata]
name = tinycss2
url = https://tinycss2.readthedocs.io/
version = file: tinycss2/VERSION
license = BSD
license_file = LICENSE
description = Low-level CSS parser for Python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Simon Sapin
author_email = community@kozea.fr
platforms =
  Linux
  macOS
  Windows
keywords =
  css
  parser
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Text Processing
project_urls =
  Documentation = https://tinycss2.readthedocs.io/
  Code = https://github.com/Kozea/tinycss2/
  Issue tracker = https://github.com/Kozea/tinycss2/issues
  Donation = https://www.patreon.com/kozea

[options]
packages = find:
setup_requires = pytest-runner
install_requires =
  setuptools >= 39.2.0
  webencodings >= 0.4
tests_require =
  pytest-runner
  pytest-cov
  pytest-flake8
  pytest-isort
python_requires = >= 3.5

[options.package_data]
tinycss2 =
  VERSION
  css-parsing-tests/*

[options.extras_require]
doc =
  sphinx
  sphinx_rtd_theme
test =
  pytest-runner
  pytest-cov
  pytest-flake8
  pytest-isort

[bdist_wheel]
python-tag = py3

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[aliases]
test = pytest

[tool:pytest]
addopts = --flake8 --isort
norecursedirs = build dist .cache .eggs .git

[coverage:run]
branch = True
include = tinycss2/*

[isort]
default_section = THIRDPARTY
